Fix multi-tenant: corrections paramètres et fonctions, mise à jour UI et traductions

--- a/stock-easy-app/src/locales/fr/translation.json
+++ b/stock-easy-app/src/locales/fr/translation.json
@@ -2035,7 +2035,7 @@
       "autonomy": "Autonomie",
       "daysRemaining": "jours restants",
       "salesPerDay": "Ventes/Jour",
-      "mlAdjusted": "ajustées ML",
+      "mlAdjusted": "historiques (moyenne 30j)",
       "rotation": "Rotation",
       "perYear": "par an"
     },
