Fix: Corriger l'affichage de l'ETA dans la colonne Livraison pour correspondre aux détails du PO
- Utiliser order.eta en priorité au lieu de recalculer l'ETA
- Aligner la logique de calcul avec OrderDetailPanel
- Corriger l'appel à formatETA pour passer les bonnes options (referenceDate, isCompleted)
- Renommer la colonne 'ETA' en 'Livraison' dans toutes les langues
- Ajouter l'année dans le format de date de livraison
- Migration 098: Correction de confirm_order_reconciliation pour mettre à jour le statut correctement

--- a/stock-easy-app/src/locales/en/translation.json
+++ b/stock-easy-app/src/locales/en/translation.json
@@ -1936,6 +1936,7 @@
       "poNumber": "PO #",
       "date": "Date",
       "supplier": "Supplier",
+      "eta": "Delivery",
       "warehouse": "Warehouse",
       "total": "Total",
       "status": "Status",
@@ -1956,6 +1957,15 @@
       "validateReceipt": "Validate receipt",
       "startReconciliation": "Start reconciliation",
       "confirmReconciliation": "Confirm reconciliation"
+    },
+    "eta": {
+      "pendingConfirmation": "Pending",
+      "today": "Today",
+      "inDays": "in {{count}}d",
+      "late": "{{count}}d late",
+      "onTime": "On time",
+      "deliveredEarly": "+{{count}}d early",
+      "deliveredLate": "-{{count}}d late"
     },
     "empty": {
       "title": "No orders",
@@ -2002,6 +2012,9 @@
     "estimatedDelivery": "Estimated Delivery",
     "timelineComments": "Timeline & Comments",
     "daysLate": "{{count}}d late",
+    "deliveredLate": "Delivered {{count}}d late",
+    "deliveredOnTime": "Delivered on time",
+    "deliveredEarly": "Delivered {{count}}d early",
     "today": "Today",
     "tomorrow": "Tomorrow",
     "inDays": "in {{count}}d",
