feat: SetupPassword, invitations Shopify (resend/send), magic link, locales

--- a/stock-easy-app/src/locales/en/translation.json
+++ b/stock-easy-app/src/locales/en/translation.json
@@ -129,7 +129,29 @@
     "connectedAccount": "Connected account",
     "acceptInvitation": "Accept invitation",
     "acceptingInvitation": "Accepting...",
-    "acceptNote": "By accepting, you will have access to the company's data and features"
+    "acceptNote": "By accepting, you will have access to the company's data and features",
+    "welcomeTitle": "Welcome to Stockeasy!",
+    "createPasswordDescription": "Create your password to access your account.",
+    "shop": "Shop",
+    "passwordPlaceholder": "Enter your password",
+    "confirmPasswordPlaceholder": "Confirm your password",
+    "passwordsMustMatch": "Passwords must match",
+    "passwordStrengthHint": "Use at least 8 characters with uppercase letters, numbers and symbols for better security",
+    "configurePassword": "Set up my password",
+    "configuring": "Setting up...",
+    "passwordConfigured": "Password configured successfully!",
+    "passwordUpdateError": "Error configuring password",
+    "verifyingToken": "Verifying your invitation...",
+    "invalidToken": "Invalid token",
+    "tokenExpired": "This invitation link has expired. Please request a new invitation.",
+    "tokenAlreadyUsed": "This invitation link has already been used.",
+    "invitationError": "Invitation error",
+    "invalidInvitationLink": "Invalid or missing invitation link.",
+    "contactSupport": "If the problem persists, contact our support.",
+    "contactUs": "Contact us",
+    "alreadyHaveAccount": "Already have an account?",
+    "signIn": "Sign in",
+    "passwordAlreadyConfigured": "Your password is already configured."
   },
   "navigation": {
     "dashboard": "Dashboard",
