--- a/stock-easy-app/src/locales/es/translation.json
+++ b/stock-easy-app/src/locales/es/translation.json
@@ -129,7 +129,29 @@
     "connectedAccount": "Cuenta conectada",
     "acceptInvitation": "Aceptar invitación",
     "acceptingInvitation": "Aceptando...",
-    "acceptNote": "Al aceptar, tendrás acceso a los datos y funcionalidades de la empresa"
+    "acceptNote": "Al aceptar, tendrás acceso a los datos y funcionalidades de la empresa",
+    "welcomeTitle": "¡Bienvenido a Stockeasy!",
+    "createPasswordDescription": "Crea tu contraseña para acceder a tu cuenta.",
+    "shop": "Tienda",
+    "passwordPlaceholder": "Ingresa tu contraseña",
+    "confirmPasswordPlaceholder": "Confirma tu contraseña",
+    "passwordsMustMatch": "Las contraseñas deben coincidir",
+    "passwordStrengthHint": "Usa al menos 8 caracteres con mayúsculas, números y símbolos para mayor seguridad",
+    "configurePassword": "Configurar mi contraseña",
+    "configuring": "Configurando...",
+    "passwordConfigured": "¡Contraseña configurada con éxito!",
+    "passwordUpdateError": "Error al configurar la contraseña",
+    "verifyingToken": "Verificando tu invitación...",
+    "invalidToken": "Token inválido",
+    "tokenExpired": "Este enlace de invitación ha expirado. Por favor solicita una nueva invitación.",
+    "tokenAlreadyUsed": "Este enlace de invitación ya ha sido utilizado.",
+    "invitationError": "Error de invitación",
+    "invalidInvitationLink": "Enlace de invitación inválido o faltante.",
+    "contactSupport": "Si el problema persiste, contacta a nuestro soporte.",
+    "contactUs": "Contáctanos",
+    "alreadyHaveAccount": "¿Ya tienes una cuenta?",
+    "signIn": "Iniciar sesión",
+    "passwordAlreadyConfigured": "Tu contraseña ya está configurada."
   },
   "navigation": {
     "dashboard": "Panel de Control",
