--- a/stock-easy-app/src/locales/fr/translation.json
+++ b/stock-easy-app/src/locales/fr/translation.json
@@ -129,7 +129,29 @@
     "connectedAccount": "Compte connecté",
     "acceptInvitation": "Accepter l'invitation",
     "acceptingInvitation": "Acceptation en cours...",
-    "acceptNote": "En acceptant, vous aurez accès aux données et aux fonctionnalités de l'entreprise"
+    "acceptNote": "En acceptant, vous aurez accès aux données et aux fonctionnalités de l'entreprise",
+    "welcomeTitle": "Bienvenue sur Stockeasy !",
+    "createPasswordDescription": "Créez votre mot de passe pour accéder à votre compte.",
+    "shop": "Boutique",
+    "passwordPlaceholder": "Entrez votre mot de passe",
+    "confirmPasswordPlaceholder": "Confirmez votre mot de passe",
+    "passwordsMustMatch": "Les mots de passe doivent correspondre",
+    "passwordStrengthHint": "Utilisez au moins 8 caractères, avec des majuscules, chiffres et symboles pour plus de sécurité",
+    "configurePassword": "Configurer mon mot de passe",
+    "configuring": "Configuration en cours...",
+    "passwordConfigured": "Mot de passe configuré avec succès !",
+    "passwordUpdateError": "Erreur lors de la configuration du mot de passe",
+    "verifyingToken": "Vérification de votre invitation...",
+    "invalidToken": "Token invalide",
+    "tokenExpired": "Ce lien d'invitation a expiré. Veuillez demander une nouvelle invitation.",
+    "tokenAlreadyUsed": "Ce lien d'invitation a déjà été utilisé.",
+    "invitationError": "Erreur d'invitation",
+    "invalidInvitationLink": "Lien d'invitation invalide ou manquant.",
+    "contactSupport": "Si le problème persiste, contactez notre support.",
+    "contactUs": "Nous contacter",
+    "alreadyHaveAccount": "Vous avez déjà un compte ?",
+    "signIn": "Se connecter",
+    "passwordAlreadyConfigured": "Votre mot de passe est déjà configuré."
   },
   "navigation": {
     "dashboard": "Tableau de Bord",
